--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "JhykitchenPortal",
+  "name": "JHY-Kitchen-Cabinet",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "aos": "^2.3.4",
     "@mdi/font": "5.9.55",
+    "aos": "^2.3.4",
     "axios": "^1.3.4",
     "core-js": "^3.6.5",
     "lodash": "^4.17.21",
